Update backend API URL

--- a/snapvolt.html
+++ b/snapvolt.html
@@ -538,7 +538,7 @@
     // IMPORTANT: This should point to your backend server.
     // If running locally, it's typically 'http://127.0.0.1:5000/api/' or 'http://localhost:5000/api/'
     // If deployed, replace with your actual server URL.
-    const BASE_API_URL = 'http://127.0.0.1:5000/api/'; 
+    const BASE_API_URL = 'https://snapvolt-api.onrender.com/api/'; 
 
     // DOM Elements
     const mobileMenuBtn = document.getElementById('mobileMenuBtn');
